# Anul2

./: README.md
Anul2/CCC/Level1/firstProblem/: CMakeLists.txt  main.c
Anul2/CCC/Level2/: CMakeLists.txt  main.cpp
Anul2/Sem1/AF/LAB10/: (EN) L9 - BFS.rar
Anul2/Sem1/BD/Colocviu/: COLOCVIU (1).sql  COLOCVIU.sql  ColocviuFinal.rar  ColocviuFinal_1.rar  Colocviu_Script.rar  Colocviu_Script.txt  Drop.txt
Anul2/Sem1/BD/Tema1/: 1-3Solved.txt  2-1Solved.txt  2-2Solved.txt  2-3Solved.txt  3-1solved.txt  3-2Solved.txt  3-3Solved.txt  Tema1.rar
Anul2/Sem1/BD/Tema2/: 4-1Solved(almost).txt  4-2Solved(almost).txt  4-3Solved(Almost).txt  5-1(Solved).txt  5-2(Solved).txt  5-4(Solved).txt  Tema2.rar
Anul2/Sem1/BD/Tema3/: 6-1(Solved).txt  6-2(Solved-Almost).txt  6-3(Solved).txt  6-4(Solved).txt  7-1.txt  7-2.txt  Tema3.rar
Anul2/Sem1/BD/Tema4/: 10-1(Solved).txt  10-2(Solved).txt  8-1(Solved).txt  8-2(Solved).txt  9-1(Solved).txt  9-2(Solved).txt  (+2 more)
Anul2/Sem1/CANLAB/: Sintaxa aimspice.md
Anul2/Sem1/Can/: Materie CAN din grile .docx
Anul2/Sem1/Engleza/: 1. Academic writing.pptx  3. The writing process.pptx  4. The writing process2.pptx  5.Readability.pptx
Anul2/Sem1/MES/: Laboratoare MES.doc
Anul2/Sem1/Peda/: Examen pedagogic.docx  PEDA - examen an2 SEM 2.docx
Anul2/Sem2/GAC/SetupSDL3Try3/: CMakeLists.txt  main.cpp
Anul2/Sem2/SO/: l03p1.c  l03p2.c
Anul2/Sem2/TP/: README.md
Anul2/Vaults/Drafts/: BD Notes.md  CAN - RASPUNSURI CU EXPLICATII.md  Cum ar trebui sa functioneze statul Roman.md  Hash Table.md  Heapify.md  MES, Subiecte pe Cursuri.md  QuickSort.md
(+1085 files in other folders)
